Updated bug with scrollbar.

--- a/frontend/src/assets/globals.css
+++ b/frontend/src/assets/globals.css
@@ -30,7 +30,6 @@ body {
 
 ::-webkit-scrollbar-thumb {
   background: #d1d1d6;
-  border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -52,7 +51,6 @@ body {
 /* Webkit (Chrome, Safari, Edge) */
 .purple-range::-webkit-slider-runnable-track {
   height: 8px;
-  border-radius: 9999px; 
   background: linear-gradient(to right, #ffff, #ffff); 
   border: 1px solid rgb(202, 202, 202);
 }
@@ -63,7 +61,6 @@ body {
   width: 20px;
   height: 20px;
   background-color: black; 
-  border-radius: 50%;
   cursor: pointer;
   margin-top: -6px; 
   border: 2px solid white;
@@ -73,7 +70,6 @@ body {
 /* Firefox */
 .purple-range::-moz-range-track {
   height: 8px;
-  border-radius: 9999px;
   background: linear-gradient(to right, #7c3aed, #a78bfa);
 }
 
@@ -81,7 +77,6 @@ body {
   width: 20px;
   height: 20px;
   background-color: #7c3aed;
-  border-radius: 50%;
   border: 2px solid white;
   cursor: pointer;
   box-shadow: 0 0 4px rgba(124, 58, 237, 0.7);
